# PW2Editor

./: CMakeLists.txt  Globals.h  Log.cpp  Log.h  PW2Editor.cpp  PW2Paint.cpp  README.md  System.cpp  System.h  build.sh
Data/: ChildData.h  Data.cpp  Data.h  EncounterData.cpp  EncounterData.h  EvolutionData.cpp  EvolutionData.h  ItemData.cpp  ItemData.h  LearnsetData.cpp  LearnsetData.h  MoveData.cpp  MoveData.h  PersonalData.cpp  PersonalData.h  Pokemon.cpp  Pokemon.h  PokemonData.cpp  PokemonData.h  Project.cpp  Project.h  TrainerData.cpp  TrainerData.h  ZoneData.cpp  ZoneData.h
Modules/: Encounter.cpp  Encounter.h  Item.cpp  Item.h  List.cpp  List.h  MenuBar.cpp  MenuBar.h  Module.cpp  Module.h  Move.cpp  Move.h  Pokemon.cpp  Pokemon.h  Trainer.cpp  Trainer.h
Modules/Encounter/: Encounter.cpp  Encounter.h  LocationSearch.cpp  LocationSearch.h  Zone.cpp  Zone.h
Modules/Item/: Item.cpp  Item.h  ItemSearch.cpp  ItemSearch.h  ItemText.cpp  ItemText.h
Modules/Move/: Move.cpp  Move.h  MoveSearch.cpp  MoveSearch.h  MoveText.cpp  MoveText.h
Modules/Pokemon/: Child.cpp  Child.h  Evolution.cpp  Evolution.h  Learnset.cpp  Learnset.h  Personal.cpp  Personal.h  PokemonForm.cpp  PokemonForm.h  PokemonSearch.cpp  PokemonSearch.h  PokemonText.cpp  PokemonText.h
Modules/Trainer/: Trainer.cpp  Trainer.h  TrainerSearch.cpp  TrainerSearch.h  TrainerTeam.cpp  TrainerTeam.h
Utils/: Alle5Format.cpp  Alle5Format.h  DataUtils.cpp  DataUtils.h  FileUtils.cpp  FileUtils.h  KlangFormat.cpp  KlangFormat.h  KlinFormat.cpp  KlinFormat.h  NarcUtils.cpp  NarcUtils.h  StringUtils.cpp  StringUtils.h
Utils/Internal/: Image.cpp  Image.h  KlangFormat.cpp  KlinFormat.cpp  KlinFormat.h  Palette.h
Utils/Internal/Cache/: Cache.h  NCGRCache.h  NCLRCache.h  TextureCache.h
Utils/NDS/: Alle5Format.cpp  Alle5Format.h  NCGRFormat.cpp  NCGRFormat.h  NCLRFormat.cpp  NCLRFormat.h  NarcUtils.cpp  NarcUtils.h
Windows/: Engine.cpp  Engine.h  Paint.cpp  Paint.h  Window.cpp  Window.h  Wizard.cpp  Wizard.h
